add_library(EndlessSkyLib OBJECT)

# Set the appropriate compiler flags.
target_include_directories(EndlessSkyLib PUBLIC "${LIBMAD_INCLUDE_DIR}")
if(MSVC)
	target_compile_options(EndlessSkyLib PUBLIC "/W3" "/permissive-" "/sdl" "/GR-" "/analyze-"
		"-Wno-nonportable-include-path" "$<$<CONFIG:Release>:/Gy;/Oi>")
	target_compile_definitions(EndlessSkyLib PUBLIC "_UNICODE" "UNICODE")
else()
	target_compile_options(EndlessSkyLib PUBLIC
		"-Wall" "-pedantic-errors" "-Wold-style-cast" "$<$<CONFIG:Release>:-fno-rtti>")
endif()

# Every source file (and header file) should be listed here, except main.cpp.
# If you add a new file, add it to this list.
target_sources(EndlessSkyLib PRIVATE
	GameVersion.cpp
	GameVersion.h
	ai/AI.cpp
	ai/AI.h
	ai/Command.cpp
	ai/Command.h
	ai/FireCommand.cpp
	ai/FireCommand.h
	ai/FormationPattern.cpp
	ai/FormationPattern.h
	ai/FormationPositioner.cpp
	ai/FormationPositioner.h
	ai/orders/Orders.cpp
	ai/orders/Orders.h
	ai/orders/OrderSet.cpp
	ai/orders/OrderSet.h
	ai/orders/OrderSingle.cpp
	ai/orders/OrderSingle.h
	ai/ShipAICache.cpp
	ai/ShipAICache.h
	audio/Audio.cpp
	audio/Audio.h
	audio/Music.cpp
	audio/Music.h
	audio/player/AudioPlayer.cpp
	audio/player/AudioPlayer.h
	audio/player/MusicPlayer.cpp
	audio/player/MusicPlayer.h
	audio/Sound.cpp
	audio/Sound.h
	audio/SoundCategory.h
	audio/supplier/AsyncAudioSupplier.cpp
	audio/supplier/AsyncAudioSupplier.h
	audio/supplier/AudioSupplier.cpp
	audio/supplier/AudioSupplier.h
	audio/supplier/effect/Fade.cpp
	audio/supplier/effect/Fade.h
	audio/supplier/FlacSupplier.cpp
	audio/supplier/FlacSupplier.h
	audio/supplier/Mp3Supplier.cpp
	audio/supplier/Mp3Supplier.h
	audio/supplier/WavSupplier.cpp
	audio/supplier/WavSupplier.h
	collision/Collision.cpp
	collision/Collision.h
	collision/CollisionSet.cpp
	collision/CollisionSet.h
	collision/CollisionType.h
	collision/DamageDealt.h
	collision/DamageProfile.cpp
	collision/DamageProfile.h
	collision/FighterHitHelper.h
	collision/MinableDamageDealt.h
	collision/Projectile.cpp
	collision/Projectile.h
	collision/Weapon.cpp
	collision/Weapon.h
	comparators/ByDisplayName.h
	comparators/ByGivenOrder.h
	comparators/ByName.h
	comparators/BySeriesAndIndex.h
	comparators/ByUUID.h
	conditions/ConditionAssignments.cpp
	conditions/ConditionAssignments.h
	conditions/ConditionEntry.cpp
	conditions/ConditionEntry.h
	conditions/ConditionSet.cpp
	conditions/ConditionSet.h
	conditions/ConditionsStore.cpp
	conditions/ConditionsStore.h
	engine/AlertLabel.cpp
	engine/AlertLabel.h
	engine/AmmoDisplay.cpp
	engine/AmmoDisplay.h
	engine/Camera.cpp
	engine/Camera.h
	engine/Effect.cpp
	engine/Effect.h
	engine/Engine.cpp
	engine/Engine.h
	engine/EscortDisplay.cpp
	engine/EscortDisplay.h
	engine/Flotsam.cpp
	engine/Flotsam.h
	engine/Message.cpp
	engine/Message.h
	engine/Messages.cpp
	engine/Messages.h
	engine/MiniMap.cpp
	engine/MiniMap.h
	engine/PlanetLabel.cpp
	engine/PlanetLabel.h
	engine/Radar.cpp
	engine/Radar.h
	engine/Visual.cpp
	engine/Visual.h
	files/DataFile.cpp
	files/DataFile.h
	files/DataNode.cpp
	files/DataNode.h
	files/DataWriter.cpp
	files/DataWriter.h
	files/Files.cpp
	files/Files.h
	files/GameData.cpp
	files/GameData.h
	files/Logger.cpp
	files/Logger.h
	files/Plugins.cpp
	files/Plugins.h
	files/PrintData.cpp
	files/PrintData.h
	files/SavedGame.cpp
	files/SavedGame.h
	files/UniverseObjects.cpp
	files/UniverseObjects.h
	files/ZipFile.cpp
	files/ZipFile.h
	fleet/Fleet.cpp
	fleet/Fleet.h
	fleet/FleetCargo.cpp
	fleet/FleetCargo.h
	fleet/Person.cpp
	fleet/Person.h
	fleet/Personality.cpp
	fleet/Personality.h
	fleet/RaidFleet.cpp
	fleet/RaidFleet.h
	fleet/Variant.cpp
	fleet/Variant.h
	government/Government.cpp
	government/Government.h
	government/Politics.cpp
	government/Politics.h
	image/BlendingMode.h
	image/ImageBuffer.cpp
	image/ImageBuffer.h
	image/ImageFileData.cpp
	image/ImageFileData.h
	image/ImageSet.cpp
	image/ImageSet.h
	image/Mask.cpp
	image/Mask.h
	image/MaskManager.cpp
	image/MaskManager.h
	image/Sprite.cpp
	image/Sprite.h
	image/SpriteSet.cpp
	image/SpriteSet.h
	map/AsteroidField.cpp
	map/AsteroidField.h
	map/Galaxy.cpp
	map/Galaxy.h
	map/Hazard.cpp
	map/Hazard.h
	map/Minable.cpp
	map/Minable.h
	map/News.cpp
	map/News.h
	map/Planet.cpp
	map/Planet.h
	map/Port.cpp
	map/Port.h
	map/Sale.h
	map/Shop.h
	map/StellarObject.cpp
	map/StellarObject.h
	map/System.cpp
	map/System.h
	map/Trade.cpp
	map/Trade.h
	map/Weather.cpp
	map/Weather.h
	map/Wormhole.cpp
	map/Wormhole.h
	mission/Conversation.cpp
	mission/Conversation.h
	mission/DialogSettings.cpp
	mission/DialogSettings.h
	mission/DistanceCalculationSettings.cpp
	mission/DistanceCalculationSettings.h
	mission/GameAction.cpp
	mission/GameAction.h
	mission/GameEvent.cpp
	mission/GameEvent.h
	mission/LocationFilter.cpp
	mission/LocationFilter.h
	mission/Mission.cpp
	mission/Mission.h
	mission/MissionAction.cpp
	mission/MissionAction.h
	mission/MissionTimer.cpp
	mission/MissionTimer.h
	mission/NPC.cpp
	mission/NPC.h
	mission/NPCAction.cpp
	mission/NPCAction.h
	mission/ShipManager.cpp
	mission/ShipManager.h
	pathfinding/DistanceMap.cpp
	pathfinding/DistanceMap.h
	pathfinding/RouteEdge.cpp
	pathfinding/RouteEdge.h
	pathfinding/RoutePlan.cpp
	pathfinding/RoutePlan.h
	pathfinding/WormholeStrategy.h
	player/Account.cpp
	player/Account.h
	player/BookEntry.cpp
	player/BookEntry.h
	player/CoreStartData.cpp
	player/CoreStartData.h
	player/Date.cpp
	player/Date.h
	player/Depreciation.cpp
	player/Depreciation.h
	player/Gamerules.cpp
	player/Gamerules.h
	player/Mortgage.cpp
	player/Mortgage.h
	player/PlayerInfo.cpp
	player/PlayerInfo.h
	player/Preferences.cpp
	player/Preferences.h
	player/StartConditions.cpp
	player/StartConditions.h
	player/SystemEntry.h
	shader/BatchDrawList.cpp
	shader/BatchDrawList.h
	shader/BatchShader.cpp
	shader/BatchShader.h
	shader/DrawList.cpp
	shader/DrawList.h
	shader/FillShader.cpp
	shader/FillShader.h
	shader/FogShader.cpp
	shader/FogShader.h
	shader/LineShader.cpp
	shader/LineShader.h
	shader/opengl.cpp
	shader/opengl.h
	shader/OutlineShader.cpp
	shader/OutlineShader.h
	shader/PointerShader.cpp
	shader/PointerShader.h
	shader/RingShader.cpp
	shader/RingShader.h
	shader/Shader.cpp
	shader/Shader.h
	shader/SpriteShader.cpp
	shader/SpriteShader.h
	shader/StarField.cpp
	shader/StarField.h
	ship/Armament.cpp
	ship/Armament.h
	ship/CaptureOdds.cpp
	ship/CaptureOdds.h
	ship/CargoHold.cpp
	ship/CargoHold.h
	ship/Hardpoint.cpp
	ship/Hardpoint.h
	ship/JumpType.h
	ship/Outfit.cpp
	ship/Outfit.h
	ship/Ship.cpp
	ship/Ship.h
	ship/ShipEvent.cpp
	ship/ShipEvent.h
	ship/ShipJumpNavigation.cpp
	ship/ShipJumpNavigation.h
	test/Test.cpp
	test/Test.h
	test/TestContext.cpp
	test/TestContext.h
	test/TestData.cpp
	test/TestData.h
	text/Alignment.h
	text/Clipboard.cpp
	text/Clipboard.h
	text/DisplayText.cpp
	text/DisplayText.h
	text/Font.cpp
	text/Font.h
	text/FontSet.cpp
	text/FontSet.h
	text/Format.cpp
	text/Format.h
	text/Layout.h
	text/Paragraphs.cpp
	text/Paragraphs.h
	text/Phrase.cpp
	text/Phrase.h
	text/Table.cpp
	text/Table.h
	text/TextReplacements.cpp
	text/TextReplacements.h
	text/Truncate.h
	text/Utf8.cpp
	text/Utf8.h
	text/WrappedText.cpp
	text/WrappedText.h
	ui/Animate.h
	ui/BankPanel.cpp
	ui/BankPanel.h
	ui/BoardingPanel.cpp
	ui/BoardingPanel.h
	ui/CategoryList.cpp
	ui/CategoryList.h
	ui/CategoryType.h
	ui/ClickZone.h
	ui/ConversationPanel.cpp
	ui/ConversationPanel.h
	ui/DialogPanel.cpp
	ui/DialogPanel.h
	ui/FrameTimer.cpp
	ui/FrameTimer.h
	ui/GameLoadingPanel.cpp
	ui/GameLoadingPanel.h
	ui/GameWindow.cpp
	ui/GameWindow.h
	ui/HailPanel.cpp
	ui/HailPanel.h
	ui/HiringPanel.cpp
	ui/HiringPanel.h
	ui/InfoPanelState.cpp
	ui/InfoPanelState.h
	ui/Information.cpp
	ui/Information.h
	ui/Interface.cpp
	ui/Interface.h
	ui/ItemInfoDisplay.cpp
	ui/ItemInfoDisplay.h
	ui/LoadPanel.cpp
	ui/LoadPanel.h
	ui/LogbookPanel.cpp
	ui/LogbookPanel.h
	ui/MainPanel.cpp
	ui/MainPanel.h
	ui/MapDetailPanel.cpp
	ui/MapDetailPanel.h
	ui/MapOutfitterPanel.cpp
	ui/MapOutfitterPanel.h
	ui/MapPanel.cpp
	ui/MapPanel.h
	ui/MapPlanetCard.cpp
	ui/MapPlanetCard.h
	ui/MapSalesPanel.cpp
	ui/MapSalesPanel.h
	ui/MapShipyardPanel.cpp
	ui/MapShipyardPanel.h
	ui/MenuAnimationPanel.cpp
	ui/MenuAnimationPanel.h
	ui/MenuPanel.cpp
	ui/MenuPanel.h
	ui/MessageLogPanel.cpp
	ui/MessageLogPanel.h
	ui/MissionPanel.cpp
	ui/MissionPanel.h
	ui/MouseButton.h
	ui/OutfitInfoDisplay.cpp
	ui/OutfitInfoDisplay.h
	ui/OutfitterPanel.cpp
	ui/OutfitterPanel.h
	ui/Panel.cpp
	ui/Panel.h
	ui/PlanetPanel.cpp
	ui/PlanetPanel.h
	ui/PlayerInfoPanel.cpp
	ui/PlayerInfoPanel.h
	ui/PreferencesPanel.cpp
	ui/PreferencesPanel.h
	ui/RenderBuffer.cpp
	ui/RenderBuffer.h
	ui/Screen.cpp
	ui/Screen.h
	ui/ScrollBar.cpp
	ui/ScrollBar.h
	ui/ScrollVar.h
	ui/ShipInfoDisplay.cpp
	ui/ShipInfoDisplay.h
	ui/ShipInfoPanel.cpp
	ui/ShipInfoPanel.h
	ui/ShipNameDialogPanel.cpp
	ui/ShipNameDialogPanel.h
	ui/ShipyardPanel.cpp
	ui/ShipyardPanel.h
	ui/ShopPanel.cpp
	ui/ShopPanel.h
	ui/SpaceportPanel.cpp
	ui/SpaceportPanel.h
	ui/StartConditionsPanel.cpp
	ui/StartConditionsPanel.h
	ui/TextArea.cpp
	ui/TextArea.h
	ui/Tooltip.cpp
	ui/Tooltip.h
	ui/TradingPanel.cpp
	ui/TradingPanel.h
	ui/UI.cpp
	ui/UI.h
	util/Angle.cpp
	util/Angle.h
	util/Bitset.cpp
	util/Bitset.h
	util/Body.cpp
	util/Body.h
	util/Color.cpp
	util/Color.h
	util/CustomEvents.cpp
	util/CustomEvents.h
	util/Dictionary.cpp
	util/Dictionary.h
	util/Distribution.cpp
	util/Distribution.h
	util/EsUuid.cpp
	util/EsUuid.h
	util/ExclusiveItem.h
	util/Hasher.h
	util/pi.h
	util/Point.cpp
	util/Point.h
	util/Random.cpp
	util/Random.h
	util/RandomEvent.h
	util/Rectangle.cpp
	util/Rectangle.h
	util/Set.h
	util/shift.h
	util/StringInterner.cpp
	util/StringInterner.h
	util/Swizzle.cpp
	util/Swizzle.h
	util/TaskQueue.cpp
	util/TaskQueue.h
	util/WeightedList.h
)

if(WIN32)
	target_sources(EndlessSkyLib PRIVATE
		windows/TimerResolutionGuard.cpp
		windows/TimerResolutionGuard.h
		windows/WinConsole.cpp
		windows/WinConsole.h
		windows/WinVersion.cpp
		windows/WinVersion.h
		windows/WinWindow.cpp
		windows/WinWindow.h
	)
endif()
