add_library(EndlessSkyLib OBJECT)

# Set the appropriate compiler flags.
target_include_directories(EndlessSkyLib PUBLIC "${LIBMAD_INCLUDE_DIR}")
if(MSVC)
	target_compile_options(EndlessSkyLib PUBLIC "/W3" "/permissive-" "/sdl" "/GR-" "/analyze-"
		"-Wno-nonportable-include-path" "$<$<CONFIG:Release>:/Gy;/Oi>")
	target_compile_definitions(EndlessSkyLib PUBLIC "_UNICODE" "UNICODE")
else()
	target_compile_options(EndlessSkyLib PUBLIC
		"-Wall" "-pedantic-errors" "-Wold-style-cast" "$<$<CONFIG:Release>:-fno-rtti>")
endif()

# Every source file (and header file) should be listed here, except main.cpp.
# If you add a new file, add it to this list.
target_sources(EndlessSkyLib PRIVATE
	GameVersion.cpp
	GameVersion.h
	Logger.cpp
	Logger.h
	PrintData.cpp
	PrintData.h
	audio/Audio.cpp
	audio/Audio.h
	audio/Music.cpp
	audio/Music.h
	audio/player/AudioPlayer.cpp
	audio/player/AudioPlayer.h
	audio/player/MusicPlayer.cpp
	audio/player/MusicPlayer.h
	audio/Sound.cpp
	audio/Sound.h
	audio/SoundCategory.h
	audio/supplier/AsyncAudioSupplier.cpp
	audio/supplier/AsyncAudioSupplier.h
	audio/supplier/AudioSupplier.cpp
	audio/supplier/AudioSupplier.h
	audio/supplier/effect/Fade.cpp
	audio/supplier/effect/Fade.h
	audio/supplier/FlacSupplier.cpp
	audio/supplier/FlacSupplier.h
	audio/supplier/Mp3Supplier.cpp
	audio/supplier/Mp3Supplier.h
	audio/supplier/WavSupplier.cpp
	audio/supplier/WavSupplier.h
	body/AsteroidField.cpp
	body/AsteroidField.h
	body/Body.cpp
	body/Body.h
	body/collision/Collision.cpp
	body/collision/Collision.h
	body/collision/CollisionSet.cpp
	body/collision/CollisionSet.h
	body/collision/CollisionType.h
	body/collision/DamageDealt.h
	body/collision/DamageProfile.cpp
	body/collision/DamageProfile.h
	body/collision/FighterHitHelper.h
	body/collision/MinableDamageDealt.h
	body/Effect.cpp
	body/Effect.h
	body/Flotsam.cpp
	body/Flotsam.h
	body/Minable.cpp
	body/Minable.h
	body/Projectile.cpp
	body/Projectile.h
	body/Ship.cpp
	body/Ship.h
	body/ship/Armament.cpp
	body/ship/Armament.h
	body/ship/CaptureOdds.cpp
	body/ship/CaptureOdds.h
	body/ship/CargoHold.cpp
	body/ship/CargoHold.h
	body/ship/Hardpoint.cpp
	body/ship/Hardpoint.h
	body/ship/JumpType.h
	body/ship/Outfit.cpp
	body/ship/Outfit.h
	body/ship/ShipEvent.cpp
	body/ship/ShipEvent.h
	body/ship/ShipJumpNavigation.cpp
	body/ship/ShipJumpNavigation.h
	body/ship/Weapon.cpp
	body/ship/Weapon.h
	body/StellarObject.cpp
	body/StellarObject.h
	body/Visual.cpp
	body/Visual.h
	conditions/ConditionAssignments.cpp
	conditions/ConditionAssignments.h
	conditions/ConditionEntry.cpp
	conditions/ConditionEntry.h
	conditions/ConditionSet.cpp
	conditions/ConditionSet.h
	conditions/ConditionsStore.cpp
	conditions/ConditionsStore.h
	fleet/Fleet.cpp
	fleet/Fleet.h
	fleet/FleetCargo.cpp
	fleet/FleetCargo.h
	fleet/Person.cpp
	fleet/Person.h
	fleet/Personality.cpp
	fleet/Personality.h
	fleet/RaidFleet.cpp
	fleet/RaidFleet.h
	fleet/Variant.cpp
	fleet/Variant.h
	gamedata/DataFile.cpp
	gamedata/DataFile.h
	gamedata/DataNode.cpp
	gamedata/DataNode.h
	gamedata/DataWriter.cpp
	gamedata/DataWriter.h
	gamedata/Files.cpp
	gamedata/Files.h
	gamedata/GameData.cpp
	gamedata/GameData.h
	gamedata/Plugins.cpp
	gamedata/Plugins.h
	gamedata/UniverseObjects.cpp
	gamedata/UniverseObjects.h
	gamedata/ZipFile.cpp
	gamedata/ZipFile.h
	government/Government.cpp
	government/Government.h
	government/Politics.cpp
	government/Politics.h
	image/BlendingMode.h
	image/ImageBuffer.cpp
	image/ImageBuffer.h
	image/ImageFileData.cpp
	image/ImageFileData.h
	image/ImageSet.cpp
	image/ImageSet.h
	image/Mask.cpp
	image/Mask.h
	image/MaskManager.cpp
	image/MaskManager.h
	image/Sprite.cpp
	image/Sprite.h
	image/SpriteSet.cpp
	image/SpriteSet.h
	main_view/BoardingPanel.cpp
	main_view/BoardingPanel.h
	main_view/Engine.cpp
	main_view/Engine.h
	main_view/HailPanel.cpp
	main_view/HailPanel.h
	main_view/MainPanel.cpp
	main_view/MainPanel.h
	main_view/Weather.cpp
	main_view/Weather.h
	main_view/ai/AI.cpp
	main_view/ai/AI.h
	main_view/ai/Command.cpp
	main_view/ai/Command.h
	main_view/ai/FireCommand.cpp
	main_view/ai/FireCommand.h
	main_view/ai/FormationPattern.cpp
	main_view/ai/FormationPattern.h
	main_view/ai/FormationPositioner.cpp
	main_view/ai/FormationPositioner.h
	main_view/ai/orders/Orders.cpp
	main_view/ai/orders/Orders.h
	main_view/ai/orders/OrderSet.cpp
	main_view/ai/orders/OrderSet.h
	main_view/ai/orders/OrderSingle.cpp
	main_view/ai/orders/OrderSingle.h
	main_view/ai/ShipAICache.cpp
	main_view/ai/ShipAICache.h
	main_view/hud/AlertLabel.cpp
	main_view/hud/AlertLabel.h
	main_view/hud/AmmoDisplay.cpp
	main_view/hud/AmmoDisplay.h
	main_view/hud/Camera.cpp
	main_view/hud/Camera.h
	main_view/hud/EscortDisplay.cpp
	main_view/hud/EscortDisplay.h
	main_view/hud/Message.cpp
	main_view/hud/Message.h
	main_view/hud/Messages.cpp
	main_view/hud/Messages.h
	main_view/hud/MiniMap.cpp
	main_view/hud/MiniMap.h
	main_view/hud/PlanetLabel.cpp
	main_view/hud/PlanetLabel.h
	main_view/hud/Radar.cpp
	main_view/hud/Radar.h
	map/Galaxy.cpp
	map/Galaxy.h
	map/Hazard.cpp
	map/Hazard.h
	map/LocationFilter.cpp
	map/LocationFilter.h
	map/News.cpp
	map/News.h
	map/Planet.cpp
	map/Planet.h
	map/Port.cpp
	map/Port.h
	map/Sale.h
	map/Shop.h
	map/System.cpp
	map/System.h
	map/Trade.cpp
	map/Trade.h
	map/Wormhole.cpp
	map/Wormhole.h
	mission/Conversation.cpp
	mission/Conversation.h
	mission/DialogSettings.cpp
	mission/DialogSettings.h
	mission/DistanceCalculationSettings.cpp
	mission/DistanceCalculationSettings.h
	mission/Endpoint.cpp
	mission/Endpoint.h
	mission/GameAction.cpp
	mission/GameAction.h
	mission/GameEvent.cpp
	mission/GameEvent.h
	mission/Mission.cpp
	mission/Mission.h
	mission/MissionAction.cpp
	mission/MissionAction.h
	mission/MissionTimer.cpp
	mission/MissionTimer.h
	mission/NPC.cpp
	mission/NPC.h
	mission/NPCAction.cpp
	mission/NPCAction.h
	mission/ShipManager.cpp
	mission/ShipManager.h
	pathfinding/DistanceMap.cpp
	pathfinding/DistanceMap.h
	pathfinding/RouteEdge.cpp
	pathfinding/RouteEdge.h
	pathfinding/RoutePlan.cpp
	pathfinding/RoutePlan.h
	pathfinding/WormholeStrategy.h
	player/Account.cpp
	player/Account.h
	player/BookEntry.cpp
	player/BookEntry.h
	player/CoreStartData.cpp
	player/CoreStartData.h
	player/Date.cpp
	player/Date.h
	player/Depreciation.cpp
	player/Depreciation.h
	player/Gamerules.cpp
	player/Gamerules.h
	player/Mortgage.cpp
	player/Mortgage.h
	player/PlayerInfo.cpp
	player/PlayerInfo.h
	player/Preferences.cpp
	player/Preferences.h
	player/StartConditions.cpp
	player/StartConditions.h
	player/SystemEntry.h
	shader/BatchDrawList.cpp
	shader/BatchDrawList.h
	shader/BatchShader.cpp
	shader/BatchShader.h
	shader/DrawList.cpp
	shader/DrawList.h
	shader/FillShader.cpp
	shader/FillShader.h
	shader/FogShader.cpp
	shader/FogShader.h
	shader/LineShader.cpp
	shader/LineShader.h
	shader/opengl.cpp
	shader/opengl.h
	shader/OutlineShader.cpp
	shader/OutlineShader.h
	shader/PointerShader.cpp
	shader/PointerShader.h
	shader/RingShader.cpp
	shader/RingShader.h
	shader/Shader.cpp
	shader/Shader.h
	shader/SpriteShader.cpp
	shader/SpriteShader.h
	shader/StarField.cpp
	shader/StarField.h
	test/Test.cpp
	test/Test.h
	test/TestContext.cpp
	test/TestContext.h
	test/TestData.cpp
	test/TestData.h
	ui/Animate.h
	ui/ClickZone.h
	ui/FrameTimer.cpp
	ui/FrameTimer.h
	ui/GameWindow.cpp
	ui/GameWindow.h
	ui/Information.cpp
	ui/Information.h
	ui/Interface.cpp
	ui/Interface.h
	ui/MouseButton.h
	ui/panel/ConversationPanel.cpp
	ui/panel/ConversationPanel.h
	ui/panel/DialogPanel.cpp
	ui/panel/DialogPanel.h
	ui/panel/map/MapDetailPanel.cpp
	ui/panel/map/MapDetailPanel.h
	ui/panel/map/MapOutfitterPanel.cpp
	ui/panel/map/MapOutfitterPanel.h
	ui/panel/map/MapPanel.cpp
	ui/panel/map/MapPanel.h
	ui/panel/map/MapPlanetCard.cpp
	ui/panel/map/MapPlanetCard.h
	ui/panel/map/MapSalesPanel.cpp
	ui/panel/map/MapSalesPanel.h
	ui/panel/map/MapShipyardPanel.cpp
	ui/panel/map/MapShipyardPanel.h
	ui/panel/map/MissionPanel.cpp
	ui/panel/map/MissionPanel.h
	ui/panel/menu/GameLoadingPanel.cpp
	ui/panel/menu/GameLoadingPanel.h
	ui/panel/menu/LoadPanel.cpp
	ui/panel/menu/LoadPanel.h
	ui/panel/menu/MenuAnimationPanel.cpp
	ui/panel/menu/MenuAnimationPanel.h
	ui/panel/menu/MenuPanel.cpp
	ui/panel/menu/MenuPanel.h
	ui/panel/menu/PreferencesPanel.cpp
	ui/panel/menu/PreferencesPanel.h
	ui/panel/menu/SavedGame.cpp
	ui/panel/menu/SavedGame.h
	ui/panel/menu/StartConditionsPanel.cpp
	ui/panel/menu/StartConditionsPanel.h
	ui/panel/Panel.cpp
	ui/panel/Panel.h
	ui/panel/planet/BankPanel.cpp
	ui/panel/planet/BankPanel.h
	ui/panel/planet/HiringPanel.cpp
	ui/panel/planet/HiringPanel.h
	ui/panel/planet/PlanetPanel.cpp
	ui/panel/planet/PlanetPanel.h
	ui/panel/planet/shop/CategoryList.cpp
	ui/panel/planet/shop/CategoryList.h
	ui/panel/planet/shop/CategoryType.h
	ui/panel/planet/shop/ItemInfoDisplay.cpp
	ui/panel/planet/shop/ItemInfoDisplay.h
	ui/panel/planet/shop/OutfitInfoDisplay.cpp
	ui/panel/planet/shop/OutfitInfoDisplay.h
	ui/panel/planet/shop/OutfitterPanel.cpp
	ui/panel/planet/shop/OutfitterPanel.h
	ui/panel/planet/shop/ShipInfoDisplay.cpp
	ui/panel/planet/shop/ShipInfoDisplay.h
	ui/panel/planet/shop/ShipyardPanel.cpp
	ui/panel/planet/shop/ShipyardPanel.h
	ui/panel/planet/shop/ShopPanel.cpp
	ui/panel/planet/shop/ShopPanel.h
	ui/panel/planet/SpaceportPanel.cpp
	ui/panel/planet/SpaceportPanel.h
	ui/panel/planet/TradingPanel.cpp
	ui/panel/planet/TradingPanel.h
	ui/panel/player/InfoPanelState.cpp
	ui/panel/player/InfoPanelState.h
	ui/panel/player/LogbookPanel.cpp
	ui/panel/player/LogbookPanel.h
	ui/panel/player/MessageLogPanel.cpp
	ui/panel/player/MessageLogPanel.h
	ui/panel/player/PlayerInfoPanel.cpp
	ui/panel/player/PlayerInfoPanel.h
	ui/panel/player/ShipInfoPanel.cpp
	ui/panel/player/ShipInfoPanel.h
	ui/panel/ShipNameDialogPanel.cpp
	ui/panel/ShipNameDialogPanel.h
	ui/RenderBuffer.cpp
	ui/RenderBuffer.h
	ui/Screen.cpp
	ui/Screen.h
	ui/ScrollBar.cpp
	ui/ScrollBar.h
	ui/ScrollVar.h
	ui/text/Alignment.h
	ui/text/Clipboard.cpp
	ui/text/Clipboard.h
	ui/text/DisplayText.cpp
	ui/text/DisplayText.h
	ui/text/Font.cpp
	ui/text/Font.h
	ui/text/FontSet.cpp
	ui/text/FontSet.h
	ui/text/Format.cpp
	ui/text/Format.h
	ui/text/Layout.h
	ui/text/Paragraphs.cpp
	ui/text/Paragraphs.h
	ui/text/Phrase.cpp
	ui/text/Phrase.h
	ui/text/Table.cpp
	ui/text/Table.h
	ui/text/TextReplacements.cpp
	ui/text/TextReplacements.h
	ui/text/Truncate.h
	ui/text/Utf8.cpp
	ui/text/Utf8.h
	ui/text/WrappedText.cpp
	ui/text/WrappedText.h
	ui/TextArea.cpp
	ui/TextArea.h
	ui/Tooltip.cpp
	ui/Tooltip.h
	ui/UI.cpp
	ui/UI.h
	util/Angle.cpp
	util/Angle.h
	util/Bitset.cpp
	util/Bitset.h
	util/Color.cpp
	util/Color.h
	util/comparator/ByDisplayName.h
	util/comparator/ByGivenOrder.h
	util/comparator/ByName.h
	util/comparator/BySeriesAndIndex.h
	util/comparator/ByUUID.h
	util/CustomEvents.cpp
	util/CustomEvents.h
	util/Dictionary.cpp
	util/Dictionary.h
	util/Distribution.cpp
	util/Distribution.h
	util/EsUuid.cpp
	util/EsUuid.h
	util/ExclusiveItem.h
	util/Hasher.h
	util/pi.h
	util/Point.cpp
	util/Point.h
	util/Random.cpp
	util/Random.h
	util/RandomEvent.h
	util/Rectangle.cpp
	util/Rectangle.h
	util/Set.h
	util/shift.h
	util/StringInterner.cpp
	util/StringInterner.h
	util/Swizzle.cpp
	util/Swizzle.h
	util/TaskQueue.cpp
	util/TaskQueue.h
	util/WeightedList.h
)

if(WIN32)
	target_sources(EndlessSkyLib PRIVATE
		windows/TimerResolutionGuard.cpp
		windows/TimerResolutionGuard.h
		windows/WinConsole.cpp
		windows/WinConsole.h
		windows/WinVersion.cpp
		windows/WinVersion.h
		windows/WinWindow.cpp
		windows/WinWindow.h
	)
endif()
